Add broadcast client screen to status app
