# apps/iracing-status/src-tauri/generated/http-api/src/server/mod.rs
@@ -20,78 +20,52 @@ use crate::{
     models::check_xss_string, models::check_xss_vec_string,
 };
 
-
 /// Setup API Server.
 pub fn new<I, A, E>(api_impl: I) -> Router
 where
     I: AsRef<A> + Clone + Send + Sync + 'static,
     A: apis::default::Default<E> + Send + Sync + 'static,
     E: std::fmt::Debug + Send + Sync + 'static,
-    
 {
     // build our application with a route
     Router::new()
-        .route("/",
-            get(get_root::<I, A, E>)
-        )
-        .route("/health",
-            get(get_health::<I, A, E>)
-        )
+        .route("/", get(get_root::<I, A, E>))
+        .route("/health", get(get_health::<I, A, E>))
+        .route("/schema", get(get_schema::<I, A, E>))
         .with_state(api_impl)
 }
 
-
 #[tracing::instrument(skip_all)]
-fn get_health_validation(
-) -> std::result::Result<(
-), ValidationErrors>
-{
-
-Ok((
-))
+fn get_health_validation() -> std::result::Result<(), ValidationErrors> {
+    Ok(())
 }
 /// GetHealth - GET /health
 #[tracing::instrument(skip_all)]
 async fn get_health<I, A, E>(
-  method: Method,
-  TypedHeader(host): TypedHeader<Host>,
-  cookies: CookieJar,
- State(api_impl): State<I>,
+    method: Method,
+    TypedHeader(host): TypedHeader<Host>,
+    cookies: CookieJar,
+    State(api_impl): State<I>,
 ) -> Result<Response, StatusCode>
 where
     I: AsRef<A> + Send + Sync,
     A: apis::default::Default<E> + Send + Sync,
     E: std::fmt::Debug + Send + Sync + 'static,
-        {
+{
+    let validation = get_health_validation();
 
-
-
-
-      let validation =
-    get_health_validation(
-    )
-  ;
-
-  let Ok((
-  )) = validation else {
-    return Response::builder()
+    let Ok(()) = validation else {
+        return Response::builder()
             .status(StatusCode::BAD_REQUEST)
             .body(Body::from(validation.unwrap_err().to_string()))
             .map_err(|_| StatusCode::BAD_REQUEST);
-  };
+    };
 
+    let result = api_impl.as_ref().get_health(&method, &host, &cookies).await;
 
+    let mut response = Response::builder();
 
-let result = api_impl.as_ref().get_health(
-      
-      &method,
-      &host,
-      &cookies,
-  ).await;
-
-  let mut response = Response::builder();
-
-  let resp = match result {
+    let resp = match result {
                                             Ok(rsp) => match rsp {
                                                 apis::default::GetHealthResponse::Status200_TheHTTPServerIsRunningAndAbleToRespond
                                                     (body)
@@ -133,62 +107,43 @@ let result = api_impl.as_ref().get_health(
                                             },
                                         };
 
-
-                                        resp.map_err(|e| { error!(error = ?e); StatusCode::INTERNAL_SERVER_ERROR })
+    resp.map_err(|e| {
+        error!(error = ?e);
+        StatusCode::INTERNAL_SERVER_ERROR
+    })
 }
 
-
 #[tracing::instrument(skip_all)]
-fn get_root_validation(
-) -> std::result::Result<(
-), ValidationErrors>
-{
-
-Ok((
-))
+fn get_root_validation() -> std::result::Result<(), ValidationErrors> {
+    Ok(())
 }
 /// GetRoot - GET /
 #[tracing::instrument(skip_all)]
 async fn get_root<I, A, E>(
-  method: Method,
-  TypedHeader(host): TypedHeader<Host>,
-  cookies: CookieJar,
- State(api_impl): State<I>,
+    method: Method,
+    TypedHeader(host): TypedHeader<Host>,
+    cookies: CookieJar,
+    State(api_impl): State<I>,
 ) -> Result<Response, StatusCode>
 where
     I: AsRef<A> + Send + Sync,
     A: apis::default::Default<E> + Send + Sync,
     E: std::fmt::Debug + Send + Sync + 'static,
-        {
+{
+    let validation = get_root_validation();
 
-
-
-
-      let validation =
-    get_root_validation(
-    )
-  ;
-
-  let Ok((
-  )) = validation else {
-    return Response::builder()
+    let Ok(()) = validation else {
+        return Response::builder()
             .status(StatusCode::BAD_REQUEST)
             .body(Body::from(validation.unwrap_err().to_string()))
             .map_err(|_| StatusCode::BAD_REQUEST);
-  };
+    };
 
+    let result = api_impl.as_ref().get_root(&method, &host, &cookies).await;
 
+    let mut response = Response::builder();
 
-let result = api_impl.as_ref().get_root(
-      
-      &method,
-      &host,
-      &cookies,
-  ).await;
-
-  let mut response = Response::builder();
-
-  let resp = match result {
+    let resp = match result {
                                             Ok(rsp) => match rsp {
                                                 apis::default::GetRootResponse::Status200_HTTPServerBanner
                                                     (body)
@@ -226,16 +181,91 @@ let result = api_impl.as_ref().get_root(
                                             },
                                         };
 
-
-                                        resp.map_err(|e| { error!(error = ?e); StatusCode::INTERNAL_SERVER_ERROR })
+    resp.map_err(|e| {
+        error!(error = ?e);
+        StatusCode::INTERNAL_SERVER_ERROR
+    })
 }
 
+#[tracing::instrument(skip_all)]
+fn get_schema_validation() -> std::result::Result<(), ValidationErrors> {
+    Ok(())
+}
+/// GetSchema - GET /schema
+#[tracing::instrument(skip_all)]
+async fn get_schema<I, A, E>(
+    method: Method,
+    TypedHeader(host): TypedHeader<Host>,
+    cookies: CookieJar,
+    State(api_impl): State<I>,
+) -> Result<Response, StatusCode>
+where
+    I: AsRef<A> + Send + Sync,
+    A: apis::default::Default<E> + Send + Sync,
+    E: std::fmt::Debug + Send + Sync + 'static,
+{
+    let validation = get_schema_validation();
+
+    let Ok(()) = validation else {
+        return Response::builder()
+            .status(StatusCode::BAD_REQUEST)
+            .body(Body::from(validation.unwrap_err().to_string()))
+            .map_err(|_| StatusCode::BAD_REQUEST);
+    };
+
+    let result = api_impl.as_ref().get_schema(&method, &host, &cookies).await;
+
+    let mut response = Response::builder();
+
+    let resp = match result {
+                                            Ok(rsp) => match rsp {
+                                                apis::default::GetSchemaResponse::Status200_TheOpenAPISchemaForThisHTTPServer
+                                                    (body)
+                                                => {
+                                                  let mut response = response.status(200);
+                                                  {
+                                                    let mut response_headers = response.headers_mut().unwrap();
+                                                    response_headers.insert(
+                                                        CONTENT_TYPE,
+                                                        HeaderValue::from_static("application/yaml"));
+                                                  }
+
+                                                  let body_content = body;
+                                                  response.body(Body::from(body_content))
+                                                },
+                                                apis::default::GetSchemaResponse::Status404_NoHTTPEndpointIsRegisteredForTheRequestedPath
+                                                    (body)
+                                                => {
+                                                  let mut response = response.status(404);
+                                                  {
+                                                    let mut response_headers = response.headers_mut().unwrap();
+                                                    response_headers.insert(
+                                                        CONTENT_TYPE,
+                                                        HeaderValue::from_static("text/plain"));
+                                                  }
+
+                                                  let body_content = body;
+                                                  response.body(Body::from(body_content))
+                                                },
+                                            },
+                                            Err(why) => {
+                                                    // Application code returned an error. This should not happen, as the implementation should
+                                                    // return a valid response.
+                                                    return api_impl.as_ref().handle_error(&method, &host, &cookies, why).await;
+                                            },
+                                        };
+
+    resp.map_err(|e| {
+        error!(error = ?e);
+        StatusCode::INTERNAL_SERVER_ERROR
+    })
+}
 
 #[allow(dead_code)]
 #[inline]
 fn response_with_status_code_only(code: StatusCode) -> Result<Response, StatusCode> {
-   Response::builder()
-          .status(code)
-          .body(Body::empty())
-          .map_err(|_| code)
+    Response::builder()
+        .status(code)
+        .body(Body::empty())
+        .map_err(|_| code)
 }
